--- a/27-06-24/index.html
+++ b/27-06-24/index.html
@@ -37,12 +37,19 @@
                         <input type="text" id="newMeetingName" required placeholder="Inserisci l' impegno" />
                     </div>
                     <div>
+                        <h4>Add</h4>
                         <button type="submit">Save Meeting</button>
                     </div>
 
                 </form>
             </div>
         </main>
+        <section>
+            <div id="appointments">
+                <h2>Impegni del giorno:</h2>
+                <ul></ul>
+            </div>
+        </section>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
